Make getElementById in HTML always return the first node in document order. Bug 403868, r+sr=sicking